[package]
name = "email"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1.32", features = ["full"] }
base64 = "0.21.4"
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["add-extension"] }
